[gd_scene load_steps=2 format=3 uid="uid://dgewbw4hvhwwm"]

[ext_resource type="Script" path="res://ui/menus/gameplay/pause_menu/settings_menu/settings_menu.gd" id="1_script"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.588235)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 72
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -87.0
offset_right = 200.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="FullscreenCheck" type="CheckBox" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
button_pressed = true
text = "Fullscreen"
icon_alignment = 1

[node name="MusicLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 32)
layout_mode = 2
value = 100.0
rounded = true

[node name="SFXLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 32)
layout_mode = 2
value = 100.0
rounded = true

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "BACK"

[connection signal="mouse_entered" from="VBoxContainer/BackButton" to="." method="_on_back_button_mouse_entered"]
